[gd_scene load_steps=6 format=3 uid="uid://cuid5gf7sa7he"]

[ext_resource type="Script" path="res://scripts/parasite.gd" id="1_bpbrl"]
[ext_resource type="Texture2D" uid="uid://bkacwtd8grvhx" path="res://purplecircle-removebg-preview.png" id="2_i5kqu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a4c2w"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_an4ts"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_al6fu"]
radius = 16.0312

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_bpbrl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_a4c2w")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)

[node name="InfectionCollision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfectionCollision"]
shape = SubResource("CircleShape2D_an4ts")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.938598, 0.322894, 0.941914, 1)
scale = Vector2(0.128205, 0.128205)
texture = ExtResource("2_i5kqu")

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_al6fu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = -560.0
offset_top = -312.0
offset_right = -328.0
offset_bottom = -254.0

[node name="DeathLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "you DIED lol hahahah imagine"

[node name="RestartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "restart"

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false

[node name="YouDied" type="Label" parent="GameOverScreen"]
offset_left = 356.0
offset_top = 256.0
offset_right = 797.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 45
text = "You died. Sad."
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverScreen"]
offset_left = 432.0
offset_top = 311.0
offset_right = 715.0
offset_bottom = 376.0
theme_override_font_sizes/font_size = 35
text = "Back to menu"

[connection signal="body_entered" from="InfectionCollision" to="." method="_on_infection_collision_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverScreen/RestartButton" to="." method="_on_restart_button_pressed"]
